# toelo

./: .gitignore  Dockerfile  README.md  backup_requirements.txt  plan.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: update.md
.streamlit/: secrets.toml
docs/: Daily Template.md  updates.md
docs/.obsidian/: daily-notes.json  workspace.json
footy/: pyproject.toml
footy/src/footy/: analysis_main.py  clt_main.py  gui_app.py
footy/src/footy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
footy/src/footy/frontend/: main.py  streamlit_app.py
footy/src/footy/player_elo/: base_analysis.py  database_connection.py  display_data.py  elo_updater.py  game_analysis.py  game_validator.py  init_player_elo.py  init_sql.py  player_analysis.py  reset_players_elo.py  single_game.py
footy/src/footy/player_elo/old/: copy_init_player_elo.py  game_analysis_old.py  game_analysis_summary.json  old_init_player_elo.py
old/: clubs_elo.ipynb  clubs_elo_generator.py  players.csv:Zone.Identifier
old/footy/: db.sqlite3
old/footy/base/: admin.py  clubs_elo_generator.py  import_data.py  models.py  urls.py  views.py
old/footy/data/: club_elos.csv  clubelos_transfermrkt.csv  standard_stats_big5.csv
old/jupyter/: club_elo_kassiesa.ipynb  club_elo_name_matching.ipynb  club_elo_scraper.ipynb  player_elo.ipynb  player_elo_system.md
old/prediction/: environment.yml  predictions.ipynb  salary_scrape.ipynb  scraping.ipynb
old/src/: README.md
old/visualisation/: main.py  scraping.py  squad.csv  squad_avg.csv
src/toelo/: gui_app.py  sql_qa.ipynb
(+84 files in other folders)
