# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "footy"                # The name of your package
version = "0.1.0"             # Version number
description = "A football player analysis package"
authors = [
  { name="Daniel KIM", email="wujindaniel1011@gmail.com" }
]
dependencies = [
  # e.g. "pandas>=2.0,<3.0",
  # "requests",
  
]

# If you have optional dependencies for dev/test
[project.optional-dependencies]
dev = [
  "pytest",
  # e.g. "black", "mypy", etc.
]

[tool.setuptools]
# Because your package code is in "src/footy/"
# we tell setuptools to look in "src" for packages
package-dir = {"" = "src"}
packages = ["footy"]  # or you could use "find_namespace:"
include-package-data = false

[project.scripts]
footy-cli = "footy.clt_main:start_app"
footy-gui = "footy.frontend.streamlit_app:launch"

